-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 14.0.0-beta2
-
931f55200 (14.0)
For example select one plugin in Extension UI, open About plugins view and toggle it. Close it and don't restart, the one currently open does not reflect the new state immediately. Only after activating another plugin and coming back to it shows the new state
| For Gerrit Dashboard: QTCREATORBUG-31177 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 578054,2 | ExtensionManager: Keep "Load on Start" checkbox up to date | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |